Added tinyxml2 library and read from an xml file.

--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,6 @@ FakesAssemblies/
 GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
+
+#Information about what files are in use by MSVC
+HiveEngine.VC.opendb
