Design comments, more stubs, logic. Added comments to interfaces and components explaining their responsibilities. Added some more stubs to components, added player input component. Fixed missing logic in component manager update/draw loops.

--- a/HiveEngine/HiveEngine/HiveEngine.vcxproj
+++ b/HiveEngine/HiveEngine/HiveEngine.vcxproj
@@ -171,6 +171,7 @@
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="MovementComponent.cpp" />
     <ClCompile Include="ParticleSystemComponent.cpp" />
+    <ClCompile Include="PlayerInputComponent.cpp" />
     <ClCompile Include="ServiceLocator.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="tempmodel.cpp" />
@@ -196,6 +197,7 @@
     <ClInclude Include="MovementComponent.h" />
     <ClInclude Include="ObjectPool.h" />
     <ClInclude Include="ParticleSystemComponent.h" />
+    <ClInclude Include="PlayerInputComponent.h" />
     <ClInclude Include="ServiceLocator.h" />
     <ClInclude Include="Data.h" />
     <ClInclude Include="Shader.h" />
