--- a/HiveEngine/HiveEngine/HiveEngine.vcxproj
+++ b/HiveEngine/HiveEngine/HiveEngine.vcxproj
@@ -169,14 +169,13 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Model.cpp" />
-    <ClCompile Include="MovementComponent.cpp" />
     <ClCompile Include="ParticleSystemComponent.cpp" />
     <ClCompile Include="PlayerInputComponent.cpp" />
     <ClCompile Include="ServiceLocator.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="tempmodel.cpp" />
     <ClCompile Include="Texture.cpp" />
-    <ClCompile Include="VitalsComponent.cpp" />
+    <ClCompile Include="Unit.cpp" />
     <ClCompile Include="XMLInterface.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -184,6 +183,7 @@
     <ClInclude Include="Actor.h" />
     <ClInclude Include="AIComponent.h" />
     <ClInclude Include="BehaviorComponent.h" />
+    <ClInclude Include="Component.h" />
     <ClInclude Include="ComponentManager.h" />
     <ClInclude Include="DataCollection.h" />
     <ClInclude Include="DataManager.h" />
@@ -192,10 +192,10 @@
     <ClInclude Include="IComponentManager.h" />
     <ClInclude Include="IDataManager.h" />
     <ClInclude Include="IInputManager.h" />
+    <ClInclude Include="IGameWorld.h" />
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Model.h" />
-    <ClInclude Include="MovementComponent.h" />
     <ClInclude Include="ObjectPool.h" />
     <ClInclude Include="ParticleSystemComponent.h" />
     <ClInclude Include="PlayerInputComponent.h" />
@@ -204,7 +204,7 @@
     <ClInclude Include="Shader.h" />
     <ClInclude Include="tempmodel.h" />
     <ClInclude Include="Texture.h" />
-    <ClInclude Include="VitalsComponent.h" />
+    <ClInclude Include="Unit.h" />
     <ClInclude Include="XMLInterface.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
