--- a/HiveEngine/HiveEngine/HiveEngine.vcxproj
+++ b/HiveEngine/HiveEngine/HiveEngine.vcxproj
@@ -163,15 +163,12 @@
     <ClCompile Include="AIComponent.cpp" />
     <ClCompile Include="BehaviorComponent.cpp" />
     <ClCompile Include="ComponentManager.cpp" />
-    <ClCompile Include="Connection.cpp" />
     <ClCompile Include="DataManager.cpp" />
-    <ClCompile Include="EuclideanHeuristic.cpp" />
     <ClCompile Include="game.cpp" />
-    <ClCompile Include="GameWorld.cpp" />
-    <ClCompile Include="Graph.cpp" />
     <ClCompile Include="InputManager.cpp" />
-    <ClCompile Include="Node.cpp" />
-    <ClCompile Include="UIElement.cpp" />
+    <ClCompile Include="QuadTree.cpp" />
+    <ClCompile Include="QuadTreeLeafNode.cpp" />
+    <ClCompile Include="QuadTreeNode.cpp" />
     <ClCompile Include="UIManager.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mesh.cpp" />
@@ -189,17 +186,12 @@
     <ClInclude Include="AbilityComponent.h" />
     <ClInclude Include="Actor.h" />
     <ClInclude Include="AIComponent.h" />
-    <ClInclude Include="BaseHeuristic.h" />
     <ClInclude Include="BehaviorComponent.h" />
     <ClInclude Include="Component.h" />
     <ClInclude Include="ComponentManager.h" />
-    <ClInclude Include="Connection.h" />
     <ClInclude Include="DataCollection.h" />
     <ClInclude Include="DataManager.h" />
-    <ClInclude Include="EuclideanHeuristic.h" />
     <ClInclude Include="game.h" />
-    <ClInclude Include="GameWorld.h" />
-    <ClInclude Include="Graph.h" />
     <ClInclude Include="IAssetManager.h" />
     <ClInclude Include="IComponentManager.h" />
     <ClInclude Include="IDataManager.h" />
@@ -209,16 +201,17 @@
     <ClInclude Include="IUIManager.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Model.h" />
-    <ClInclude Include="Node.h" />
     <ClInclude Include="ObjectPool.h" />
     <ClInclude Include="ParticleSystemComponent.h" />
     <ClInclude Include="PlayerInputComponent.h" />
+    <ClInclude Include="QuadTree.h" />
+    <ClInclude Include="QuadTreeLeafNode.h" />
+    <ClInclude Include="QuadTreeNode.h" />
     <ClInclude Include="ServiceLocator.h" />
     <ClInclude Include="Data.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="tempmodel.h" />
     <ClInclude Include="Texture.h" />
-    <ClInclude Include="UIElement.h" />
     <ClInclude Include="Unit.h" />
     <ClInclude Include="UIManager.h" />
     <ClInclude Include="XMLInterface.h" />
