--- a/HiveEngine/HiveEngine/HiveEngine.vcxproj
+++ b/HiveEngine/HiveEngine/HiveEngine.vcxproj
@@ -163,9 +163,13 @@
     <ClCompile Include="AIComponent.cpp" />
     <ClCompile Include="BehaviorComponent.cpp" />
     <ClCompile Include="ComponentManager.cpp" />
+    <ClCompile Include="Connection.cpp" />
     <ClCompile Include="DataManager.cpp" />
+    <ClCompile Include="EuclideanHeuristic.cpp" />
     <ClCompile Include="game.cpp" />
+    <ClCompile Include="Graph.cpp" />
     <ClCompile Include="InputManager.cpp" />
+    <ClCompile Include="Node.cpp" />
     <ClCompile Include="QuadTree.cpp" />
     <ClCompile Include="QuadTreeLeafNode.cpp" />
     <ClCompile Include="QuadTreeNode.cpp" />
@@ -186,12 +190,16 @@
     <ClInclude Include="AbilityComponent.h" />
     <ClInclude Include="Actor.h" />
     <ClInclude Include="AIComponent.h" />
+    <ClInclude Include="BaseHeuristic.h" />
     <ClInclude Include="BehaviorComponent.h" />
     <ClInclude Include="Component.h" />
     <ClInclude Include="ComponentManager.h" />
+    <ClInclude Include="Connection.h" />
     <ClInclude Include="DataCollection.h" />
     <ClInclude Include="DataManager.h" />
+    <ClInclude Include="EuclideanHeuristic.h" />
     <ClInclude Include="game.h" />
+    <ClInclude Include="Graph.h" />
     <ClInclude Include="IAssetManager.h" />
     <ClInclude Include="IComponentManager.h" />
     <ClInclude Include="IDataManager.h" />
@@ -201,6 +209,7 @@
     <ClInclude Include="IUIManager.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Model.h" />
+    <ClInclude Include="Node.h" />
     <ClInclude Include="ObjectPool.h" />
     <ClInclude Include="ParticleSystemComponent.h" />
     <ClInclude Include="PlayerInputComponent.h" />
